# mcp-sql

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-20-mcp-sql-improvements-design.md  2026-02-20-mcp-sql-improvements.md
src/: demo.rs  error.rs  lib.rs  main.rs  schema.rs  server.rs
src/db/: convert.rs  dialect.rs  mod.rs
tests/: sqlite_integration.rs
tests/common/: mod.rs
