[package]
name = "mcp-sql"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "MCP server that lets LLMs query PostgreSQL, SQLite, and MySQL databases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mehdig-dev/mcp-sql"
homepage = "https://github.com/mehdig-dev/mcp-sql"
keywords = ["mcp", "sql", "database", "llm", "ai"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite", "mysql"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
anyhow = "1"
